# skeleton-c-elm

./: rename-INCOMPLETE.sh
autofoo/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  autofoo.pc.in  configure.ac
autofoo/src/lib/: Makefile.am  efl_hello_world.c  efl_hello_world.h
